@@ -38,13 +38,13 @@
     <box id="htmlButton"/>
     <checkbox id="enabledCheckBox" checked="true" label="&enabled.label;" accesskey="&enabled.accesskey;"/>
   </hbox>
-  <tabbox>
+  <tabbox flex="1">
     <tabs>
       <tab label="&urls;"/>
       <tab label="&substitutions;"/>
     </tabs>
-    <tabpanels>
-      <tabpanel>
+    <tabpanels flex="1">
+      <tabpanel flex="1">
         <vbox flex="1">
           <hbox align="center">
             <label id="urlLabel" control="urlTextBox" value="&url.label;" accesskey="&url.accesskey;"/>
@@ -57,8 +57,8 @@
             <button id="cancelEditUrlButton" hidden="true" label="&cancelEditUrlButton.label;" accesskey="&cancelEditUrlButton.accesskey;"
                     oncommand="foxreplaceSubstitutionGroupEditor.cancelEditUrl();"/>
           </hbox>
-          <hbox>
-            <listbox id="urlsListBox" flex="1" rows="16" onkeypress="if(event.keyCode==event.DOM_VK_DELETE)foxreplaceSubstitutionGroupEditor.deleteUrl();"
+          <hbox flex="1">
+            <listbox id="urlsListBox" flex="1" onkeypress="if(event.keyCode==event.DOM_VK_DELETE)foxreplaceSubstitutionGroupEditor.deleteUrl();"
                      onselect="foxreplaceSubstitutionGroupEditor.onSelectUrl();">
               <!-- workaround for listbox height -->
               <listitem id="urlDumbItem" label=""/>
@@ -74,7 +74,7 @@
           </hbox>
         </vbox>
       </tabpanel>
-      <tabpanel>
+      <tabpanel flex="1">
         <vbox flex="1">
           <hbox align="center">
             <label id="inputStringLabel" control="inputStringTextBox" value="&inputString.label;" accesskey="&inputString.accesskey;"/>
@@ -91,8 +91,8 @@
             <button id="cancelEditSubstitutionButton" hidden="true" label="&cancelEditSubstitutionButton.label;"
                     accesskey="&cancelEditSubstitutionButton.accesskey;" oncommand="foxreplaceSubstitutionGroupEditor.cancelEditSubstitution();"/>
           </hbox>
-          <hbox>
-            <listbox id="substitutionsListBox" flex="1" rows="15"
+          <hbox flex="1">
+            <listbox id="substitutionsListBox" flex="1"
                      onkeypress="if(event.keyCode==event.DOM_VK_DELETE)foxreplaceSubstitutionGroupEditor.deleteSubstitution();"
                      onselect="foxreplaceSubstitutionGroupEditor.onSelectSubstitution();">
               <listhead>
